--- a/case01.html
+++ b/case01.html
@@ -54,7 +54,7 @@
 				</div>
 				<hr>
 				<div class="wrap-input100 validate-input" data-validate = "Route is required">
-					<span class="label-input100">Case 01 : The delivery cost for route</span>
+					<span class="label-input100">Case 01 : The delivery cost for route (Capital Letters)</span>
 					<input class="input100" type="text" name="case01" placeholder="Enter route as hyphen separated values eg: A-B or B-C-D">
 					<span class="focus-input100"></span>
 				</div>
