--- a/case02.html
+++ b/case02.html
@@ -71,9 +71,9 @@
 										route twice in a delivery route</option>
 						<option value="E-E-cost-20">Bonus​: the number of possible delivery route from E to E that delivery cost is
 								less than 20. Given that the same route can be used twice in a delivery route</option>
-						<option value="C-D">Extra Added Cases:The number of possible delivery route from C to D without using the same
+						<option value="C-D">Extra Added Cases:The number of possible delivery route from C to D with a maximum of 4 stop without using the same
 												route twice in a delivery route</option>
-						<option value="F-D">Extra Added Cases:The number of possible delivery route from F to D without using the same
+						<option value="F-D">Extra Added Cases:The number of possible delivery route from F to D with a maximum of 4 stop without using the same
 														route twice in a delivery route</option>
 					</select>
 					
