--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -16,25 +16,9 @@
   <div id="container" class="clear">
     <h1>Installation</h1>
  
-    # Eko Delivery App<br><br>
+    # Eko Delivery App Based On NodeJS<br><br>
 
-Eko decide to introduce a new delivery services to the market in order to support growth of
-E-commerce business in Thailand. Due to innovative nature of the company, the ways to use their
-service is very innovative one.<br><br>
-
-To use Eko Delivery Service, their customers have to define the delivery route by themselves.
-They can construct it by choosing multiple routes between two towns that Eko provided.
-The delivery cost is equal to the summation of these routes that they choosed.<br><br>
-
-Each routes in the list is only one-way, That is, a route from town A to town B does not imply the
-existence of a route from town B to town A. Even if both of these routes do exist, they are distinct and
-are not necessarily have the same cost.<br><br>
-
-The purpose of this assignments is to help Eko building the system that provide their customers with
-information about delivery route. you will compute the delivery cost of a certain route, the number of
-possible delivery route between two towns, and the cost of cheapest delivery route between two
-towns.<br><br>
-
+<br><br>
 ## Running Locally<br>
 
 Make sure you have [Node.js](http://nodejs.org/) installed.<br>
