--- a/Documentation/index.html
+++ b/Documentation/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-<title>Eko Delivery App Documentation</title>
+<title>Delivery App Documentation</title>
 <meta charset="iso-8859-1">
 <link rel="stylesheet" href="styles/layout.css" type="text/css">
 </head>
@@ -16,7 +16,7 @@
   <div id="container" class="clear">
     <h1>Installation</h1>
  
-    # Eko Delivery App Based On NodeJS<br><br>
+    #Delivery App Based On NodeJS<br><br>
 
 <br><br>
 ## Running Locally<br>
@@ -24,7 +24,7 @@
 Make sure you have [Node.js](http://nodejs.org/) installed.<br>
 <strong>
 ```sh<br>
-git clone https://github.com/sabawasim/eko_delivery_app.git # or clone your own fork<br>
+git clone repo<br>
 cd eko_delivery_app<br>
 npm install<br>
 npm start<br>
